test/io/ferguson/asserteof.good
Past First Check
asserteof.chpl:28: error: bad format - Not at EOF with path "asserteof-test.nums" offset 3
